1999-11-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (GetPanelGeometry):
	removed debug statement.

	* FvwmScript/FvwmScript.1:
	* FvwmSaveDesk/FvwmSaveDesk.1:
	* FvwmSave/FvwmSave.1:
	* FvwmRearrange/FvwmRearrange.1:
	* FvwmIconBox/FvwmIconBox.1:
	* FvwmGtk/FvwmGtk.1:
	* FvwmForm/FvwmForm.1:
	* FvwmEvent/FvwmEvent.1:
	* FvwmCpp/FvwmCpp.1:
	* FvwmCommand/FvwmCommand.1:
	* FvwmAuto/FvwmAuto.1:
	* FvwmAnimate/FvwmAnimate.1:
	* FvwmTaskBar/FvwmTaskBar.1:
	* FvwmWinList/FvwmWinList.1:
	* FvwmPager/FvwmPager.1:
	* FvwmIconMan/FvwmIconMan.1:
	* FvwmTheme/FvwmTheme.1:
	* FvwmButtons/FvwmButtons.1:
	ispell session

1999-11-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (set_win_picture):
	(draw_button):
	fixed redrawing when mini icon changes causing the button to shrink

	* FvwmWinList/FvwmWinList.c (ProcessMessage):
	redraw window list when mini icon changes

1999-11-12 olicha <olivier.chapuis@free.fr>

	* FvwmGtk/FvwmGtk.c (main):
	(ProcessMessage):
	Use SetSyncMask in the place of M_LOCKONSEND. Lock on send
	only for M_STRING

1999-11-12 olicha <olivier.chapuis@free.fr>

	* FvwmAnimate/FvwmAnimate.c (main):
        (Loop):
	* FvwmAuto/FvwmAuto.c (main):
        Use SetSyncMask in the place of M_LOCKONSEND

1999-11-12 olicha <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (main):
        (ParseConfig):
        (ProcessMessage):
	* FvwmTaskBar/FvwmTaskBar.1:
	* FvwmTaskBar/ButtonArray.{c,h} (ButtonCoordinates):
        New configuration option NoIconAction for animation

1999-11-12 olicha <olivier.chapuis@free.fr>

	* FvwmIconMan/FvwmIconMan.c (main):
	* FvwmIconMan/fvwm.c (ProcessMessage):
	Use SetSyncMask in the place of M_LOCKONSEND for synchronize its
	processing with fvwm only for M_ICONIFY and M_DEICONIFY messages

1999-11-11 olicha <olivier.chapuis@free.fr>

	* FvwmWinList/FvwmWinList.c (main):
	(ProcessMessage):
	Use SetSyncMask in the place of M_LOCKONSEND for NoIconAction
	configuration command
